// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubMenuItem /> allow filtering but not enough items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Filtering below limit
  </a>
  <i
    className="fa fa-chevron-up"
    onClick={[Function]}
  />
  <ul
    className="well"
  >
    <MenuItem
      active={true}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item1"
      key="0"
      onMouseEnter={[Function]}
    >
      item one
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item2"
      key="1"
      onMouseEnter={[Function]}
    >
      item two
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item3"
      key="2"
      onMouseEnter={[Function]}
    >
      item three
    </MenuItem>
  </ul>
</li>
`;

exports[`<SubMenuItem /> allow filtering with just enough items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Filtering at limit
  </a>
  <i
    className="fa fa-chevron-up"
    onClick={[Function]}
  />
  <ul
    className="well"
  >
    <MenuItem
      active={true}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item1"
      key="0"
      onMouseEnter={[Function]}
    >
      item one
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item2"
      key="1"
      onMouseEnter={[Function]}
    >
      item two
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item3"
      key="2"
      onMouseEnter={[Function]}
    >
      item three
    </MenuItem>
  </ul>
</li>
`;

exports[`<SubMenuItem /> allow filtering with more than enough items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Filtering above limit
  </a>
  <i
    className="fa fa-chevron-up"
    onClick={[Function]}
  />
  <ul
    className="well"
  >
    <li
      role="presentation"
    >
      <a
        role="menuitem"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Custom placeholder..."
          type="text"
        />
      </a>
    </li>
    <MenuItem
      active={true}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item1"
      key="0"
      onMouseEnter={[Function]}
    >
      item one
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item2"
      key="1"
      onMouseEnter={[Function]}
    >
      item two
    </MenuItem>
    <MenuItem
      active={false}
      bsClass="dropdown"
      disabled={false}
      divider={false}
      header={false}
      href="go/to/item3"
      key="2"
      onMouseEnter={[Function]}
    >
      item three
    </MenuItem>
  </ul>
</li>
`;

exports[`<SubMenuItem /> disabled 1`] = `
<li
  className="dropdown-submenu disabled"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    disabled
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> no properties render 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  />
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> onMouseOut 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    onMouseOut item
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> onMouseOver 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  onMouseOver={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    onMouseOver item
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> with icon, text, and items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <span
      className="fa fa-star"
    >
       
    </span>
    test with items
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> with text and items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    test with items
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;

exports[`<SubMenuItem /> with text, no items 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    test text
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;
